att plugin do whatsapp

--- a/index.html
+++ b/index.html
@@ -540,11 +540,14 @@
 
         
           <!-- ínicio plugin de whatsapp -->
-          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-          <a href="https://wa.me/5521981034971" style="position:fixed;width:60px;height:60px;bottom:30px;right:10px;background-color:#25d366;color:#FFF;border-radius:50px;text-align:center;font-size:30px;box-shadow: 1px 1px 2px #888;
-          z-index:1000;" target="_blank">
-          <i style="margin-top:16px" class="fa fa-whatsapp"></i>
-          </a>
+<!-- link para a versão mais recente do Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+<!-- início plugin de whatsapp -->
+<a href="https://wa.me/5521981034971" style="position:fixed;width:60px;height:60px;bottom:30px;right:10px;background-color:#25d366;color:#FFF;border-radius:50px;text-align:center;font-size:30px;box-shadow: 1px 1px 2px #888; z-index:1000;" target="_blank">
+    <i class="fab fa-whatsapp" aria-hidden="true" style="margin-top:16px"></i>
+</a>
+
           
                 <!-- fim plugin de whatsapp -->
 
