--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                     <!--a href="#"><i class="fab fa-facebook-f"></i></a--->
                     <a href="https://www.linkedin.com/in/julianasalvatore/"><i class="fab fa-linkedin-in"></i></a>
                     <a href="https://buscatextual.cnpq.br/buscatextual/visualizacv.do"><i class="ai ai-lattes ai-x"></i></a>
+                    <a class="btn" href="https://wa.me/5521981034971"><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
             <div class="content">
@@ -467,6 +468,7 @@
                                         <a class="btn" href=""><i class="fab fa-facebook-f"></i></a-->
                                         <a class="btn" href="https://www.linkedin.com/in/julianasalvatore/"><i class="fab fa-linkedin-in"></i></a>
                                         <a class="btn" href="https://buscatextual.cnpq.br/buscatextual/visualizacv.do"><i class="ai ai-lattes ai-x"></i></a>
+                                        <a class="btn" href="https://wa.me/5521981034971"><i class="fab fa-whatsapp"></i></a>
                                         <!--a class="btn" href=""><i class="fab fa-youtube"></i></a-->
                                     </div>
                                 </div>
