--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <p>
     
 </p>
-                                    Possuo um forte interesse na área de Smart City, onde trabalho para promover eficiência, sustentabilidade e qualidade de vida nas cidades. Estou comprometida em contribuir para a melhoria das infraestruturas urbanas através da gestão inteligente de recursos e tecnologias inovadoras, transformando desafios urbanos em oportunidades de desenvolvimento.
+                                    Forte interesse na área de Smart City, onde trabalho para promover eficiência, sustentabilidade e qualidade de vida nas cidades. Estou comprometida em contribuir para a melhoria das infraestruturas urbanas através da gestão inteligente de recursos e tecnologias inovadoras, transformando desafios urbanos em oportunidades de desenvolvimento.
                                 
                                 </p>
                                 <a class="btn" href="https://wa.me/5521981034971">Me contrate</a>
