--- a/index.html
+++ b/index.html
@@ -60,17 +60,65 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="#contact">Contato<i class="fa fa-envelope"></i></a>
                                 </li>
-                            </ul>
+                        </ul>
+  
+                        </div>
+                    </nav>
+                </div>
+
+
+                <div class="sidebar-content">
+                    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+                        <a href="#" class="navbar-brand">Navigation</a>
+                        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarCollapse">
+                            <ul class="nav navbar-nav">
+
+                        </ul>
+  
                         </div>
                     </nav>
                 </div>
 
 
 
+                <div class="sidebar-content">
+                    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+                        <a href="#" class="navbar-brand"></a>
+                        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarCollapse">
+                            <ul class="nav navbar-nav">
+
+                        </ul>
+  
+                        </div>
+                    </nav>
+                </div>
 
 
+                <div class="sidebar-content">
+                    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+                        <a href="#" class="navbar-brand"></a>
+                        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarCollapse">
+                            <ul class="nav navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#"> Ganhadora do Prêmio Inova NF (2020-2022)<i class="fa-solid fa-trophy"></i></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Indicada ao Prêmio Inova NF (2020-2022)<i class="fa-solid fa-medal"></i></a>
 
-
+                        </ul>
+  
+                        </div>
+                    </nav>
+                </div>
 
 
 
@@ -92,7 +140,7 @@
                         <p>Eu sou</p>
                         <h1>Juliana Lira</h1>
                         <h2></h2>
-                        <div class="typed-text">Gestor de Redes de Computadores, Profissional de Segurança Pública e Privada, Especialista em CFTV, Desenvolvedor Web (Bootstrap), Desenvolvedor Front End</div>
+                        <div class="typed-text">Gestora de Redes de Computadores, Profissional de Segurança Pública e Privada, Especialista em CFTV, Desenvolvedor Web (Bootstrap), Desenvolvedor Front End</div>
                     </div>
                 </div>
                 <!-- Header End -->
