--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                     <!--a href="#"><i class="fab fa-facebook-f"></i></a--->
                     <a href="https://www.linkedin.com/in/julianasalvatore/"><i class="fab fa-linkedin-in"></i></a>
                     <a href="http://lattes.cnpq.br/4285968403891427"><i class="ai ai-lattes ai-x"></i></a>
-                    <a class="btn" href="https://github.com/julianasalvatore"><i class="fab fa-github"></i></a>
-                    <a class="btn" href="https://wa.me/5521981034971"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://github.com/julianasalvatore"><i class="fab fa-github"></i></a>
+                    <a href="https://wa.me/5521981034971"><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
             <div class="content">
