--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                         <div class="row align-items-center">
                             <div class="col-md-6">
                                 <div class="edu-col">
-                                    <span>Agosto-2019 <i>à</i> Dezembro-2024</span>
+                                    <span>Ago-2019 <i>à</i> Dez-2024</span>
                                     <h3>Bacharel em Administração Pública - UFF</h3>
                                     <p>Conhecimentos sobre gestão governamental, políticas públicas e desenvolvimento sustentável, preparada para atuar na administração e promover melhorias sociais.</p>
                                 </div>
