--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="sidebar-content">
                     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-                        <a href="#" class="navbar-brand">Navigation</a>
+                        <a href="#" class="navbar-brand">Menu</a>
                         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                             <span class="navbar-toggler-icon"></span>
                         </button>
@@ -62,10 +62,10 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#"> Ganhadora do Prêmio Inova NF (2023-2024)<i class="fa-solid fa-trophy"></i></a>
+                                    <a class="nav-link" href="#"> Prêmio Inova NF (2023-2024)<i class="fa-solid fa-trophy"></i></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Indicada ao Prêmio Inova NF (2020-2022)<i class="fa-solid fa-medal"></i></a>
+                                    <a class="nav-link" href="#">Prêmio Inova NF (2020-2022)<i class="fa-solid fa-medal"></i></a>
 
                         </ul>
   
@@ -93,7 +93,7 @@
                         <p>Eu sou</p>
                         <h1>Juliana Lira</h1>
                         <h2></h2>
-                        <div class="typed-text">Gestora de Redes de Computadores, Profissional de Segurança Pública e Privada, Especialista em CFTV, Desenvolvedor Web (Bootstrap), Desenvolvedor Front End</div>
+                        <div class="typed-text">Gestora de Redes de Computadores, Profissional de Segurança Pública e Privada, Especialista em CFTV, Desenvolvedora Web (Bootstrap), Desenvolvedora Front End</div>
                     </div>
                 </div>
                 <!-- Header End -->
@@ -547,7 +547,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 <!-- início plugin de whatsapp -->
-<a href="https://wa.me/5521981034971" style="position:fixed;width:60px;height:60px;bottom:30px;right:10px;background-color:#25d366;color:#FFF;border-radius:50px;text-align:center;font-size:30px;box-shadow: 1px 1px 2px #888; z-index:1000;" target="_blank">
+<a href="https://wa.me/5521981034971" style="position:fixed;width:60px;height:60px;bottom:100px;right:10px;background-color:#25d366;color:#FFF;border-radius:50px;text-align:center;font-size:30px;box-shadow: 1px 1px 2px #888; z-index:1000;" target="_blank">
     <i class="fab fa-whatsapp" aria-hidden="true" style="margin-top:16px"></i>
 </a>
 
