--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="sidebar-footer">
                     <!--a href="#"><i class="fab fa-twitter"></i></a-->
                     <!--a href="#"><i class="fab fa-facebook-f"></i></a--->
-                    <a href="https://www.linkedin.com/in/julianasalvatore/"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://julianasalvatore.github.io/jlira/"><i class="fab fa-linkedin-in"></i></a>
                     <a href="http://lattes.cnpq.br/4285968403891427"><i class="ai ai-lattes ai-x"></i></a>
                     <a href="https://github.com/julianasalvatore"><i class="fab fa-github"></i></a>
                     <a href="https://wa.me/5521981034971"><i class="fab fa-whatsapp"></i></a>
@@ -101,7 +101,7 @@
                 <!-- Large Button Start -->
                 <div class="large-btn">
                     <div class="content-inner">
-                        <a class="btn" href="#"><i class="fa fa-download"></i>Baixe o meu curriculo aqui</a>
+                        <a class="btn" href="doc/JULIANA LIRA - CURRICULO.pdf"><i class="fa fa-download"></i>Baixe o meu curriculo aqui</a>
                         <a class="btn" href="https://wa.me/5521981034971"><i class="fa fa-hands-helping"></i>Me contrate</a>
                     </div>
                 </div>
@@ -466,7 +466,7 @@
                                     <div class="social">
                                         <!--a class="btn" href=""><i class="fab fa-twitter"></i></a>
                                         <a class="btn" href=""><i class="fab fa-facebook-f"></i></a-->
-                                        <a class="btn" href="https://www.linkedin.com/in/julianasalvatore/"><i class="fab fa-linkedin-in"></i></a>
+                                        <a class="btn" href="https://julianasalvatore.github.io/jlira/"><i class="fab fa-linkedin-in"></i></a>
                                         <a class="btn" href="http://lattes.cnpq.br/4285968403891427"><i class="ai ai-lattes ai-x"></i></a>
                                         <a class="btn" href="https://github.com/julianasalvatore"><i class="fab fa-github"></i></a>
                                         <a class="btn" href="https://wa.me/5521981034971"><i class="fab fa-whatsapp"></i></a>
