--- a/mapa_para_o_futuro.html
+++ b/mapa_para_o_futuro.html
@@ -90,6 +90,7 @@
     
     <div id="intro">
       <p>Antes, um pequeno desafio, você topa?</p>
+      <img class="gif" src="https://i.gifer.com/452a.gif" alt="pergunta">
       <button class="button" onclick="startChallenge()">Sim! Vamos lá 💖</button>
     </div>
 
