commit pra apgar

--- a/mapa_para_o_futuro.html
+++ b/mapa_para_o_futuro.html
@@ -121,8 +121,8 @@
         <p style="text-align: left;">Te ofereço um compromisso feito de olhares, de respeito, de cuidado e de entrega.
         <p style="text-align: left;">Entre nós. Por nós. Só eu e você.
 
-        <p style="text-align: left;">E que seja assim...
-        Do nosso jeito, no nosso tempo, com o nosso amor
+        <p style="text-align: left;">E que seja assim... Do nosso jeito, no nosso tempo, com o nosso amor
+        <p style="text-align: left;">Eu quero te falar tudo o que eu mais quero. Quero a vida do seu lado e começar do zero. Se eu pudesse fazer mais, eu faria mais pra te ver mais que feliz. 
         <p style="text-align: left;">Você aceita esse compromisso? Aceita uma aventura comigo? 💍❤️💕
         
         <p style="text-align: left;">Pensa bem!!! Ainda dá tempo de repensar suas escolhas, tempo de fugir.</p>
@@ -168,7 +168,11 @@
           <h2>💖 Você disse SIM! 💖</h2>
           <p style="text-align: left;">Você me fez a pessoa mais feliz do mundo, minha pequena, minha rainha.
           <p style="text-align: left;">Não quero pressa nem promessas para o mundo — quero um dia de cada vez, só nosso, construindo nossos dias juntinhas (eu sei, tem a questão geografica, mas vamso dar um jeito rsrs).
-          <p style="text-align: left;">Com muita conversa, paciência, aquelas piadas ruins que só a gente entende (e as vezes nem a gente entende), declarações bregas que fazem o coração sorrir, e dividindo todos os nossos sonhos, todos mesmo 😈💖</p>
+          <p style="text-align: left;">Com muita conversa, paciência, aquelas piadas ruins que só a gente entende (e as vezes nem a gente entende), declarações bregas que fazem o coração sorrir, e dividindo todos os nossos sonhos, todos mesmo 😈💖
+          <p style="text-align: left;">"Qualquer lugar contigo eu faço de abrigo.É meu porto seguro, tô te quеrendo, eu juro"
+          <p style="text-align: left;">"Paraíso é te chamar amor, se perguntarem o que é o amor pra mim, agora eu sei responder, eu sei explicar, graças a você..."
+          <p style="text-align: left;"> Obrigada por ser você, por ser tão incrivel.
+            </p>
           <img class="gif" src="https://i.redd.it/9raird0gfz1d1.gif" alt="Comemoração">
 
        `;
